--- a/sandbox/packets/index.html
+++ b/sandbox/packets/index.html
@@ -93,26 +93,29 @@
                     </ul>
                 </nav>
                 <button type="button" class="navbar-toggle">
-            <!-- <span href="#menu" class="trinav"></span> -->
-            <span href="#menu" class="ventnav">
-              <svg xmlns="https://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
-              <path d="M7.77636 0.797607V8.53684H0.0371094L7.77636 0.797607Z" fill="#C5C5C5"/>
-              <path d="M7.77636 9.42798V17.1672H0.0371094L7.77636 9.42798Z" fill="#C5C5C5"/>
-              <path d="M7.77636 18.0583V25.7976H0.0371094L7.77636 18.0583Z" fill="#C5C5C5"/>
-              <path d="M16.4067 0.797607V8.53684H8.66748L16.4067 0.797607Z" fill="#C5C5C5"/>
-              <path d="M16.4067 9.42798V17.1672H8.66748L16.4067 9.42798Z" fill="#C5C5C5"/>
-              <path d="M16.4067 18.0583V25.7976H8.66748L16.4067 18.0583Z" fill="#C5C5C5"/>
-              <path d="M25.0371 0.797607V8.53684H17.2979L25.0371 0.797607Z" fill="#C5C5C5"/>
-              <path d="M25.0371 9.42798V17.1672H17.2979L25.0371 9.42798Z" fill="#C5C5C5"/>
-              <path d="M25.0371 18.0583V25.7976H17.2979L25.0371 18.0583Z" fill="#C5C5C5"/>
-              </svg>
-            </span>
-          </button>
+				<!-- <span href="#menu" class="trinav"></span> -->
+					<span href="#menu" class="ventnav">
+						<svg xmlns="https://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
+							<path d="M7.77636 0.797607V8.53684H0.0371094L7.77636 0.797607Z" fill="#C5C5C5"/>
+							<path d="M7.77636 9.42798V17.1672H0.0371094L7.77636 9.42798Z" fill="#C5C5C5"/>
+							<path d="M7.77636 18.0583V25.7976H0.0371094L7.77636 18.0583Z" fill="#C5C5C5"/>
+							<path d="M16.4067 0.797607V8.53684H8.66748L16.4067 0.797607Z" fill="#C5C5C5"/>
+							<path d="M16.4067 9.42798V17.1672H8.66748L16.4067 9.42798Z" fill="#C5C5C5"/>
+							<path d="M16.4067 18.0583V25.7976H8.66748L16.4067 18.0583Z" fill="#C5C5C5"/>
+							<path d="M25.0371 0.797607V8.53684H17.2979L25.0371 0.797607Z" fill="#C5C5C5"/>
+							<path d="M25.0371 9.42798V17.1672H17.2979L25.0371 9.42798Z" fill="#C5C5C5"/>
+							<path d="M25.0371 18.0583V25.7976H17.2979L25.0371 18.0583Z" fill="#C5C5C5"/>
+						</svg>
+					</span>
+				</button>
             </div>
         </div>
         <!-- / Nav Section -->
     </div>
     <!--/wrapper-->
+    <!-- 
+		[] ideas around havign a bookmark site tree data display API chain
+	-->
 
     <div id="collapse1" class="container-fluid palette-darkolive pattern-bg">
         <div class="scroll-pane">
@@ -128,12 +131,10 @@
             </div>
 
             <div class="row">
-                <div id="packets" class="container-frame pattern-bg">
+                <div id="packets" class="container-frame">
 
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
                                 <a href="#">
@@ -148,16 +149,12 @@
                             </section>
                             <br class="gap visible-lg" />
                         </div>
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                     </div>
                     <!-- packet end -->
                     <!-- packet start -->
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
                                 <a href="#">
@@ -174,9 +171,7 @@
                     <!-- packet end -->
                     <!-- packet start -->
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
                                 <a href="#">
@@ -193,9 +188,7 @@
                     <!-- packet end -->
                     <!-- packet start -->
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
                                 <a href="#">
@@ -212,8 +205,7 @@
                     <!-- packet end -->
                     <!-- packet start -->
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
@@ -231,9 +223,7 @@
                     <!-- packet end -->
                     <!-- packet start -->
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
                                 <a href="#">
@@ -250,9 +240,7 @@
                     <!-- packet end -->
                     <!-- packet start -->
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
                                 <a href="#">
@@ -269,9 +257,7 @@
                     <!-- packet end -->
                     <!-- packet start -->
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
                                 <a href="#">
@@ -288,9 +274,7 @@
                     <!-- packet end -->
                     <!-- packet start -->
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
                                 <a href="#">
@@ -307,9 +291,7 @@
                     <!-- packet end -->
                     <!-- packet start -->
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
                                 <a href="#">
@@ -326,9 +308,7 @@
                     <!-- packet end -->
                     <!-- packet start -->
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
                                 <a href="#">
@@ -345,9 +325,7 @@
                     <!-- packet end -->
                     <!-- packet start -->
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
                                 <a href="#">
@@ -364,9 +342,7 @@
                     <!-- packet end -->
                     <!-- packet start -->
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
                                 <a href="#">
@@ -383,9 +359,7 @@
                     <!-- packet end -->
                     <!-- packet start -->
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
                                 <a href="#">
@@ -402,9 +376,7 @@
                     <!-- packet end -->
                     <!-- packet start -->
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
                                 <a href="#">
@@ -421,9 +393,7 @@
                     <!-- packet end -->
                     <!-- packet start -->
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
                                 <a href="#">
@@ -440,9 +410,7 @@
                     <!-- packet end -->
                     <!-- packet start -->
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
                                 <a href="#">
@@ -459,9 +427,7 @@
                     <!-- packet end -->
                     <!-- packet start -->
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
                                 <a href="#">
@@ -478,9 +444,7 @@
                     <!-- packet end -->
                     <!-- packet start -->
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
                                 <a href="#">
@@ -497,9 +461,7 @@
                     <!-- packet end -->
                     <!-- packet start -->
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
-                            &emsp;
-                        </div>
+                        <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                         <div class="col-xs-12 col-sm-8 col-md-4">
                             <section class="packet">
                                 <a href="#">
