--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/breadcrumb.css"> -->
     <link rel="shortlink" href="https://www.joeldombek.com/" />
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/joeldom/asset/main/favicon.ico" rel="icon" type="image/x-icon">
     <!-- Top Scripts -->
     <script src="https://joeldom.github.io/14-redesign/js/modernizr.min.js"></script>
     <script type="text/javascript" src="https://www.joeldombek.com/blog/wp-includes/js/jquery/jquery.js?ver=1.11.3"></script>
