--- a/sandbox/packets/index.html
+++ b/sandbox/packets/index.html
@@ -16,6 +16,7 @@
     <meta name="twitter:card" content="summary || summary_large_image || player || app" />
     <meta name="twitter:creator" content="@joeldombek" />
 
+
     <title>PACKET ✉️</title>
 
     <link rel="stylesheet" href="../../greybox/css/coma.css" />
@@ -24,6 +25,7 @@
     <link rel="stylesheet" href="../../css/sandbox.css" />
     <link rel="stylesheet" href="../../css/packet.css" />
     <link rel="stylesheet" href="https://joeldom.github.io/style-guide/css/utility.css" />
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/joeldom/asset/main/favicon.ico" rel="icon" type="image/x-icon">
 
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -576,7 +578,8 @@
                             <h3 class="h3"><a href="#">Packet</a></h3>
                         </header>
                         <div class="tile-excerpt hidden-xs">
-                            <p>Visualization of how to organize expected & unexpected data-types […]</p>
+                            <p>Packets are fundamental units of data transmission in networking, encapsulating information for efficient communication across networks. Understanding packet structure, including headers and payloads, is crucial for optimizing
+                                performance and troubleshooting connectivity issues. […]</p>
                         </div>
                     </article>
                 </div>
@@ -588,7 +591,8 @@
                             <h3 class="h3"><a href="#">Objects & Tokens</a></h3>
                         </header>
                         <div class="tile-excerpt hidden-xs">
-                            <p>Budget Kitchen &amp; Bath This project was done while at Guaranteed Results Marketing. Creating both the layout, framework and branding, […]</p>
+                            <p>Objects and tokens represent distinct data structures within information systems. Objects encapsulate both data and behavior, while tokens serve as identifiers or keys in various applications. Together, they facilitate secure
+                                data access and manipulation, enabling developers to build robust and efficient systems. […]</p>
                         </div>
                     </article>
                 </div>
